# OOP5

./: CMakeLists.txt  animals.cpp  animals.h  base.cpp  birds.cpp  birds.h  main.cpp  points.cpp  points.h  separator.cpp
headers/: base.h  separator.h
source/: animals.cpp  base.cpp  birds.cpp  points.cpp  separator.cpp
